<resources>
    <string name="app_name">Whatsapp clone</string>
    <string name="create_account">Create Account,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="abhay">Abhay</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_">SIGN IN</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_">Sign Up</string>
    <string name="forget_password_">Forget Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="type_a_message">Type a message</string>
    <string name="sendbtn">sendBtn</string>
    <string name="this_is_sent_message">This is Sent Message</string>
    <string name="this_is_recieve_message">this is recieve message</string>
</resources>